<resources>
    <string name="app_name">Layouting3</string>
    <string name="menu">Menu</string>
    <string name="google_play">Google Play</string>
    <string name="apps">Apps</string>
    <string name="populer">Populer</string>
    <string name="more">More</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">Telegram</string>
    <string name="discord">Discord</string>
    <string name="tiktok">Tiktok</string>
    <string name="canva">Canva</string>
    <string name="capcut">Capcut</string>
    <string name="chrome">Chrome</string>
    <string name="facebook">Facebook</string>
    <!-- Add Strings -->
    <string name="tv_google_play">Google Play</string>
    <string name="popular_app_and_games">Popular App dan Games</string>
    <string name="dark_mode">dark mode</string>
    <string name="bulan">bulan</string>
    <string name="newupdategame">New + Update Games</string>

</resources>