<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/_10sdp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        Toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/bg_title"
            tools:ignore="TextSizeCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_menu"
                    style="@style/menu"
                    android:contentDescription="@string/menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/tv_google_play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_menu"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_button_click"
            android:gravity="end|center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dark_mode"
            android:textColor="@color/black" />

        <!--        Category        -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_one"
                style="@style/categoryButton"
                android:text="@string/apps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_two"
                style="@style/categoryButton"
                android:layout_toEndOf="@id/btn_app_one"
                android:text="@string/apps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_three"
                style="@style/categoryButton"
                android:layout_below="@id/btn_app_one"
                android:text="@string/apps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_four"
                style="@style/categoryButton"
                android:layout_below="@id/btn_app_two"
                android:layout_toEndOf="@id/btn_app_three"
                android:text="@string/apps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_five"
                style="@style/categoryButton"
                android:layout_below="@id/btn_app_three"
                android:text="@string/apps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_app_six"
                style="@style/categoryButton"
                android:layout_below="@id/btn_app_four"
                android:layout_toEndOf="@id/btn_app_five"
                android:text="@string/apps" />
        </RelativeLayout>
        <!--Subtitle Line 1-->
        <androidx.constraintlayout.widget.ConstraintLayout style="@style/constraintDefault">

            <TextView
                style="@style/tv_sub_title"
                android:text="@string/popular_app_and_games"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_more"
                android:background="@drawable/bg_button_click"
                android:contentDescription="@string/more"
                android:text="@string/more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--        Line 1-->
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--Image Line 1-->
                <ImageView
                    android:id="@+id/iv_bulan_one"
                    style="@style/iconGames"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bulan_two"
                    style="@style/iconGames"
                    android:layout_marginStart="-161dp"
                    android:layout_toEndOf="@id/iv_bulan_one"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bulan_three"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_bulan_two"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bulan_four"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_bulan_three"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bunga_one"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_bulan_four"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bunga_two"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_bunga_one"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_bunga_three"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_bunga_two"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <!--Text Line 1-->

                <TextView
                    android:id="@+id/tv_bulan_five"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bulan_one"
                    android:layout_marginTop="7dp"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_six"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bulan_two"
                    android:layout_toEndOf="@id/tv_bulan_five"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_bulan_seven"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bulan_three"
                    android:layout_toEndOf="@id/tv_six"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_bulan_ten"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bulan_four"
                    android:layout_toEndOf="@id/tv_bulan_seven"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanam_one"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bunga_one"
                    android:layout_toEndOf="@id/tv_bulan_ten"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanam_two"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bunga_two"
                    android:layout_toEndOf="@id/tv_tanam_one"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanam_three"
                    style="@style/iconText"
                    android:layout_below="@id/iv_bunga_three"
                    android:layout_toEndOf="@id/tv_tanam_two"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>

        </HorizontalScrollView>


        <!--Subtitle Line 2-->
        <androidx.constraintlayout.widget.ConstraintLayout style="@style/constraintDefault">

            <TextView
                style="@style/tv_sub_title"
                android:text="@string/newupdategame"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_more"
                android:background="@drawable/bg_button_click"
                android:contentDescription="@string/more"
                android:text="@string/more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--        Line 2-->
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--Image Line 2-->
                <ImageView
                    android:id="@+id/iv_sun_one"
                    style="@style/iconGames"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_sun_two"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_sun_one"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_sun_three"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_sun_two"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_sun_four"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_sun_three"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_tanah_one"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_sun_four"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_tanah_two"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_tanah_one"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/iv_tanah_three"
                    style="@style/iconGames"
                    android:layout_toEndOf="@id/iv_tanah_two"
                    android:contentDescription="@string/bulan"
                    android:src="@drawable/bulan"
                    tools:ignore="ImageContrastCheck" />

                <!--Text Line 2-->
                <TextView
                    android:id="@+id/tv_sun_one"
                    style="@style/iconText"
                    android:layout_below="@id/iv_sun_one"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_sun_two"
                    style="@style/iconText"
                    android:layout_below="@id/iv_sun_two"
                    android:layout_toEndOf="@id/iv_sun_one"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_sun_three"
                    style="@style/iconText"
                    android:layout_below="@id/iv_sun_three"
                    android:layout_toEndOf="@id/iv_sun_two"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_sun_four"
                    style="@style/iconText"
                    android:layout_below="@id/iv_sun_four"
                    android:layout_toEndOf="@id/iv_sun_three"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanah_one"
                    style="@style/iconText"
                    android:layout_below="@id/iv_tanah_one"
                    android:layout_toEndOf="@id/tv_sun_four"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanah_two"
                    style="@style/iconText"
                    android:layout_below="@id/iv_tanah_two"
                    android:layout_toEndOf="@id/tv_tanah_one"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/tv_tanah_three"
                    style="@style/iconText"
                    android:layout_below="@id/iv_tanah_three"
                    android:layout_toEndOf="@id/tv_tanah_two"
                    android:text="@string/bulan"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>

        </HorizontalScrollView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>